@@ -84,8 +84,9 @@ FitModels <- function(ma.name,tif.dir=NULL,output.dir=NULL,debug.mode=FALSE,scri
         Model=script.name
 
          # generate a filename for output #
+   
               if(debug.mode==T){
-                outfile <- file(bname<-paste(out$input$output.dir,paste("/",Model,"_",sep=""),n<-1,sep=""),"_output.txt",sep="")
+                outfile <- paste(bname<-paste(out$input$output.dir,paste("/",Model,"_",sep=""),n<-1,sep=""),"_output.txt",sep="")
                 while(file.access(outfile)==0) outfile<-paste(bname<-paste(out$input$output.dir,paste("/",Model,"_",sep=""),n<-n+1,sep=""),"_output.txt",sep="")
                 capture.output(paste(toupper(Model),"Results"),file=outfile) # reserve the new basename #
                 } else bname<-file.path(out$input$output.dir,Model)
